# koopman_learning_tropical_cyclone

./: .gitignore  CITATION.cff  README.md  TODO.md  backup_pyproject.txt  pyproject.toml  requirements.txt
examples/: compare_knf_koopman_seq2seq.ipynb  contexts.ipynb  convert_tc_track_to_dataloader.ipynb  initial_notebook.ipynb  knf_for_TC_first_example.ipynb  knf_for_TC_plot_predictions.ipynb  koopman_for_TC.ipynb  koopman_for_TC_first_example.ipynb  koopman_kernel_for_TC.ipynb  koopman_kernel_for_TC_Koopman_eigenfunctions.ipynb  koopman_kernel_for_TC_data_and_standardization.ipynb  koopman_kernel_for_TC_first_example.ipynb  koopman_kernel_for_TC_periodic_shift.ipynb  koopman_kernel_for_TC_plot_prediction.ipynb  koopman_kernel_for_TC_plot_prediction_new.ipynb  koopman_kernel_for_TC_spectral_analysis.ipynb  koopman_kernel_for_TC_spectral_analysis_2.ipynb  koopman_kernel_for_TC_spectral_analysise_eigenfunctions.ipynb  koopman_kernel_for_TC_spectral_consistency_analysis.ipynb  koopman_kernel_for_TC_spectral_consistency_analysis_fine_grid.ipynb  koopman_kernel_for_TC_spectral_consistency_analysis_fine_grid_all_plots.ipynb  koopman_kernel_sequencer.ipynb  koopman_seq2seq_kernel.ipynb
examples/background/: koopman_kernel_for_TC_RMSE_vs_num_centers_rank_lenghscale.ipynb  koopman_kernel_for_TC_data_and_standardization.ipynb
klearn_tcyclone/: data_utils.py  klearn_tcyclone.py  knf_data_utils.py  knf_model_utils.py  koopkernel_seq2seq.py  koopkernel_seq2seq_utils.py  koopkernel_sequencer_utils.py  models_utils.py  performance_benchmark.py  plot_utils.py  testing_utils.py  training_utils.py  utils.py
klearn_tcyclone/KNF/: README.md
klearn_tcyclone/KNF/modules/: data_classes.py  eval_metrics.py  models.py
klearn_tcyclone/climada/: tc_tracks.py  tc_tracks_tools.py  utils.py
klearn_tcyclone/kooplearn/: spectral_analysis.py
klearn_tcyclone/kooplearn/models/: nystroem.py
klearn_tcyclone/training_utils/: args.py  training_utils.py
plots/scripts/: comparison_knf_koopkernel_seq.py  knf_vs_KoopKernelSequencer.py  koopkernel_sequence.py  parameter_search_KoopKernelSequencer.py  parameter_search_KoopKernelSequencer_lls.py  parameter_search_runtimes_KoopKernelSequencer.py  parameter_search_runtimes_KoopKernelSequencer_train_rmse_lls.py  plot_knf.py
tests/: masked_parameters.py  test_data_utils.py  test_model_utils.py  test_utils.py  testing_NystroemKKmodel.py  testing_NystroemKKmodel_initialize_KKS_2.py
train_models/: args.py  compare_knf_koopkernel_sequence.py  generate_tc_tracks_test_set.py  train_knf.py  train_koopkernel_sequence.py  train_koopkernel_sequence_no_context.py  train_model.py  train_model.sh  train_model_KNF.py  train_model_KNF.sh  train_model_koopman_kernel.py  train_model_koopman_kernel.sh  train_model_koopman_kernel_save_model.py  train_model_koopman_kernel_save_model.sh  train_model_koopman_kernel_save_model_2.sh
train_models/koopman_spectral_analysis/: koopman_spectral_data.py  koopman_spectral_data_eigenfunction_clustering.py  koopman_spectral_data_eigenfunction_clustering_2.py  koopman_spectral_data_fine_timelag_grid.py  koopman_spectral_data_fine_timelag_grid1E-8.py
