[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koopman_learning_tropical_cyclone"
version = "0.0.1"
description = "Here we explore the possibilities to employ the Koopman operator framework to model, simulate and predict the movement of tropical cyclones."
requires-python = ">=3.9.13"
authors = [{name = "Eric Brunner", email = "nephts@mailbox.org"}]
dependencies = [
    "ipykernel",
    "ipython",
    "matplotlib",
    "matplotlib-inline",
    "numpy==1.26.4",
    "pandas",
    "scipy",
    "climada",
    "kooplearn",
    "dask",
    "cfgrib",
]

[tool.setuptools]
packages = ["klearn_tcyclone"]
